# DSAquiz3

./: CMakeLists.txt  readme.md
.devcontainer/: Dockerfile
src/: interquartile_range.h  main  main.cpp  test.cpp
test/: test.cpp
